syntax = "proto3";

option go_package = "/Proto_Proxy";

message Proxy {
  enum CMD {
    C2P_Connect = 0; // 客户端链接代理
    P2C_Connect = 1; // 代理确认链接客户端

    C2P_SendData = 2; // 客户端向代理发送消息
    P2C_SendData = 3; // 代理向客户端发送消息

    S2P_Connect = 4; // 服务器连接代理
    P2S_Connect = 5; // 代理确认链接服务器

    S2P_SendData = 6; // 服务器向代理发数据
    P2S_SendData = 7; // 代理向服务器发送
  }
}

// (client/server)向代理服发送数据
message ProxyC2S_SendData {
  int32 protocol = 1;    // 协议
  int32 protocol2 = 2;    // 协议
  string open_id = 3;
  string server_id = 4;
  bytes package_data = 5; // 二进制数据类型
}

// 代理服向(client/server)回数据
message ProxyS2C_SendData {
  int32 protocol = 1;    // 协议
  int32 protocol2 = 2;    // 协议
  string open_id = 3;
  bytes package_data = 4; // 二进制数据类型
}
